# rTools

./: .gitattributes  .gitignore  .lintstagedrc.mjs  Cargo.toml  README.md  components.json  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
crates/macro_plugin/: Cargo.toml
crates/macro_plugin/src/: lib.rs
crates/native/: Cargo.toml  tauri.conf.json
crates/native/src/: main.rs
crates/native/src/app/plugin/: mod.rs  tray.rs
crates/native/src/plugin/: mod.rs  plugin.rs  plugins.rs
crates/native/src/util/: mod.rs
crates/plugin/: Cargo.toml
crates/plugin-screen-craft/: Cargo.toml
crates/plugin-screen-craft/src/: lib.rs
crates/plugin/src/: lib.rs
crates/schema/: plugin.json
crates/ui/: package.json  tailwind.config.ts  vite.config.ts
crates/ui/src/: main.tsx
crates/ui/src/components/ui/: alert.tsx
crates/ui/src/hook/: index.ts
crates/ui/src/layout/: index.tsx
crates/ui/src/page/Main/: Main.tsx  main.css
crates/ui/src/style/: index.scss
src/: App.tsx
src-tauri/: Cargo.toml  package.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app.rs  init.rs  main.rs
src-tauri/src/app/: mod.rs
src-tauri/src/app/plugin/: event.rs  mod.rs  shortcut.rs  tray.rs  window.rs
src-tauri/src/app/setup/: mod.rs
src-tauri/src/hotkey/: mod.rs
src-tauri/src/plugin/: manifest.rs  mod.rs  plugin.rs  plugins.rs
src-tauri/src/tray/: mod.rs
src-tauri/src/util/: event_emitter.rs  mod.rs
src-tauri/src/window/: mod.rs
src/components/ui/: button.tsx
src/hook/: index.ts
src/lib/: window.ts
src/page/Main/: Main.tsx
src/page/Setting/: Setting.tsx
src/router/: index.tsx
src/store/: index.ts
src/util/: index.ts  window.ts
