[package]
name = "rtools"
version = "0.1.0"
description = "A Tauri App"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [
    "devtools",
    "tray-icon",
    "image-ico",
    "image-png",
] }
tauri-plugin-shell = "2.0.0-rc"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-devtools = "2.0.0-rc"
once_cell = "1.19"
anyhow = "1.0"
parking_lot = "0.12"
tokio = { version = "1.40.0", features = ["full"] }
libloading = "0.8"


[target.'cfg(windows)'.dependencies]
runas = "=1.2.0"
deelevate = "0.2.0"
winreg = "0.52.0"

[target.'cfg(target_os = "linux")'.dependencies]
users = "0.11.0"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-autostart = "2.0.0-rc.1"
tauri-plugin-single-instance = "2.0.0-rc.4"
tauri-plugin-global-shortcut = "2.0.0-rc"
tauri-plugin-updater = "2.0.0-rc"
tauri-plugin-window-state = "2.0.0-rc.4"
#openssl
