[package]
name = "rtools"
version = "0.1.0"
description = "A Tauri App"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
tauri = { version = "2.1.1", features = [
    "devtools",
    "tray-icon",
    "image-ico",
    "image-png",
] }
tauri-plugin-shell = "2.0.2"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
tauri-plugin-devtools = "2.0.0"
once_cell = "1.19"
anyhow = "1.0.93"
parking_lot = "0.12"
tokio = { version = "1.41.1", features = ["full"] }
libloading = "0.8"
tauri-plugin-log = "2.0.2"
log = "0.4.22"
regex = "1.11.1"


[target.'cfg(windows)'.dependencies]
runas = "=1.2.0"
deelevate = "0.2.0"
winreg = "0.52.0"

[target.'cfg(target_os = "linux")'.dependencies]
users = "0.11.0"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-autostart = "2.0.0"
tauri-plugin-single-instance = "2.0.0"
tauri-plugin-global-shortcut = "2.0.0"
tauri-plugin-updater = "2.0.0"
tauri-plugin-window-state = "2.0.2"

